--- a/web/src/App.css
+++ b/web/src/App.css
@@ -19,6 +19,7 @@
   min-height: auto;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -26,7 +27,7 @@
 }
 
 .App-link {
-  color: #57fd35;
+  color: #147900;
 }
 
 @keyframes App-logo-spin {
