--- a/web/src/components/appbar/SearchBar.module.css
+++ b/web/src/components/appbar/SearchBar.module.css
@@ -10,11 +10,10 @@ form {
   justify-content: center;
   box-shadow: 0 1px 7px rgb(128, 128, 128);
 }
-form label {
-  /* align-items: center; */
-  background-color: #fff;
-  justify-content: center;
-}
+/* form label {
+  background-color: rgb(187, 117, 117);
+  
+} */
 form input {
   background: inherit;
   /* border: none; */
@@ -22,4 +21,10 @@ form input {
   height: 1.5rem;
   padding: 0;
   margin: 0 1rem;
+}
+
+.icon {
+  /* padding-top: 2px; */
+  color: aqua;
+  background-color:rgb(58, 58, 221);
 }
