--- a/web/src/components/notes/Notes.module.css
+++ b/web/src/components/notes/Notes.module.css
@@ -1,13 +1,13 @@
 .notes {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   align-items: center;
   justify-content: center;
-  background-color: rgb(147, 244, 247);
-  border: 1px solid rgb(97, 29, 29);
-  margin: 4rem;
-  border-radius: 1rem;
   flex-wrap: wrap;
   max-width: 1020px;
-  width: 100%;
+  /* width: 100%; */
+  margin: 2rem;
+  border: 1px solid rgb(97, 29, 29);
+  /* border-radius: 1rem; */
+  /* background-color: rgb(147, 244, 247); */
 }
