--- a/web/src/components/notes/Notes.module.css
+++ b/web/src/components/notes/Notes.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 1020px;
-  /* width: 100%; */
+  width: 45rem;
   margin: 2rem;
   border: 1px solid rgb(97, 29, 29);
   /* border-radius: 1rem; */
