--- a/web/src/App.css
+++ b/web/src/App.css
@@ -24,6 +24,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(220, 190, 94);
+  border: 2px solid #147900;
 }
 
 .App-link {
